Bug 1273136: Start remote streams on SRD, and end them even if offer/answer never completed. r=jesup, r=pehrsons

MozReview-Commit-ID: ulrDM0Gzj6