media/webrtc/signaling/src/mediapipeline/MediaPipeline.h
@@ -25,6 +25,10 @@
 
 #include "webrtc/modules/rtp_rtcp/interface/rtp_header_parser.h"
 
+// Should come from MediaEngine.h, but that's a pain to include here
+// because of the MOZILLA_EXTERNAL_LINKAGE stuff.
+#define WEBRTC_DEFAULT_SAMPLE_RATE 32000
+
 class nsIPrincipal;
 
 namespace mozilla {
@@ -404,8 +408,7 @@ class MediaPipelineReceiveAudio : public MediaPipelineReceive {
                             RefPtr<AudioSessionConduit> conduit,
                             RefPtr<TransportFlow> rtp_transport,
                             RefPtr<TransportFlow> rtcp_transport,
-                            nsAutoPtr<MediaPipelineFilter> filter,
-                            bool queue_track);
+                            nsAutoPtr<MediaPipelineFilter> filter);
 
   void DetachMedia() override;
 
@@ -443,8 +446,7 @@ class MediaPipelineReceiveVideo : public MediaPipelineReceive {
                             RefPtr<VideoSessionConduit> conduit,
                             RefPtr<TransportFlow> rtp_transport,
                             RefPtr<TransportFlow> rtcp_transport,
-                            nsAutoPtr<MediaPipelineFilter> filter,
-                            bool queue_track);
+                            nsAutoPtr<MediaPipelineFilter> filter);
 
   // Called on the main thread.
   void DetachMedia() override;
